bug fix alignment of ccvid icon

--- a/imascore.css
+++ b/imascore.css
@@ -672,8 +672,8 @@ div.multiselitem {
 .ccvid:after {
 	display: block;
 	content:"";
-	width: 24px;
-	height: 24px;
+	width: 20px;
+	height: 20px;
 	position: absolute;
 	top: 0;
 	left: 0;
